Limit distance constraint: reset distance does not work #58433

Closed
opened 2018-12-01 15:03:59 +01:00 by David Gayerie · 6 comments

System Information
Operating system: Linux
Graphics card: GTX 1060

Blender Version
Broken: 2.80, 2018-11-30

Short description of error
When you add a limit distance constraint to one bone and you select a bone as the target, the distance is not updated (still 0m). When you click on the button "Reset Distance", nothing happens. Distance is still 0m. You have to manually set the distance for this constraint.

Same issue for the limit distance constraint on an object.

Exact steps for others to reproduce the error

limit_distance_bone_constraint.blend

In the file, I have added a limit distance on bone.001 and selected bone as the target and the distance is still 0m. When I click on "Reset Distance", nothing happens.

**System Information** Operating system: Linux Graphics card: GTX 1060 **Blender Version** Broken: 2.80, 2018-11-30 **Short description of error** When you add a limit distance constraint to one bone and you select a bone as the target, the distance is not updated (still 0m). When you click on the button "Reset Distance", nothing happens. Distance is still 0m. You have to manually set the distance for this constraint. Same issue for the limit distance constraint on an object. **Exact steps for others to reproduce the error** [limit_distance_bone_constraint.blend](https://archive.blender.org/developer/F5779322/limit_distance_bone_constraint.blend) In the file, I have added a limit distance on bone.001 and selected bone as the target and the distance is still 0m. When I click on "Reset Distance", nothing happens.
Author

Added subscriber: @DavidGayerie

Added subscriber: @DavidGayerie

This issue was referenced by 6a80a786f8

This issue was referenced by 6a80a786f88c7b09c451e3c585224a392c3cd95c
Alexander Gavrilov self-assigned this 2018-12-01 18:02:30 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscribers: @Sergey, @angavrilov, @mont29

Added subscribers: @Sergey, @angavrilov, @mont29
Alexander Gavrilov was unassigned by Bastien Montagne 2018-12-01 18:07:00 +01:00
Sergey Sharybin was assigned by Bastien Montagne 2018-12-01 18:07:00 +01:00

Problem is, this constraint (and probably others, like stretch to) reset that value to current distance to target inside of their evaluation code, which only has access to temp CoW data now, not orig constraint data anymore. @Sergey not sure how to fix, probably best way would be to move that to actual operator (and add callback to RNA too, to do initial setting when target are defined) ? :/

Problem is, this constraint (and probably others, like stretch to) reset that value to current distance to target inside of their evaluation code, which only has access to temp CoW data now, not orig constraint data anymore. @Sergey not sure how to fix, probably best way would be to move that to actual operator (and add callback to RNA too, to do initial setting when target are defined) ? :/
Sergey Sharybin was unassigned by Bastien Montagne 2018-12-01 18:08:17 +01:00
Alexander Gavrilov was assigned by Bastien Montagne 2018-12-01 18:08:17 +01:00

@angavrilov ah you are quick! :)
But please do the same (at least for the strecth to, maybe others…).

@angavrilov ah you are quick! :) But please do the same (at least for the strecth to, maybe others…).
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#58433
No description provided.