Fix T58433: Limit Distance constraint distance not auto-computed.

Another case of a value that needs to be written back to non-COW copy.